test/pass/chars.min
program
number c
start
    c := 'a';
    c := ' ';
    c := '"';
    c := '\\';
    c := '\'';
    c := '\n';
    c := '\r';
    c := '\t';
    c := '\0';
    c := '\e';
    c := '\0c';
    c := '\F8';
end
