test/fail/too_large_in_str.min
program 
    string s := 999999999999999 " is a large number"
start
end
